--- a/staj/blog/templates/post.html
+++ b/staj/blog/templates/post.html
@@ -14,6 +14,7 @@
         color: inherit;
         text-decoration: none;
     }
+
 </style>
 
 <div class="card post-card">
@@ -25,23 +26,26 @@
         <div class="post-card-footer">
             <p class="card-text mb-0">
                 Likes: {{ post.like_count }}
+
                 <a href="{% url 'like_post' post.id %}">
                     <img src="{% static 'like.png' %}" alt="Like">
                 </a>
+                Количество прочтении: {{post.views_count}}
             </p>
             <p class="card-text mb-0">{{ post.author.username }}{{ post.description }}</p>
             <p class="card-text mb-0">{{ post.created_at }}</p>
+
         </div>
     </div>
     <div class="card-footer">
-    {% for comment in post.comments.all %}
-    <div class="comment-card">
-        <p>{{ comment.author.username }} {{ comment.text }}</p>
+        {% for comment in post.comments.all %}
+        <div class="comment-card">
+            <p>{{ comment.author.username }} {{ comment.text }}</p>
+        </div>
+        {% empty %}
+        {% endfor %}
+        <p><a href="{% url 'comment_create' post.pk %}">Add a Comment</a></p>
     </div>
-    {% empty %}
-    {% endfor %}
-    <p><a href="{% url 'comment_create' post.pk %}">Add a Comment</a></p>
-</div>
 
 </div>
 {% endblock %}
